[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/MainMenu/Options/options.gd" type="Script" id=1]
[ext_resource path="res://assets/Misc/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/MenuItems/Black.jpg" type="Texture" id=3]

[node name="Options" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.882353 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 448.0
margin_top = 224.0
margin_right = 566.0
margin_bottom = 278.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitMenu" type="Button" parent="."]
margin_left = 688.0
margin_top = 584.0
margin_right = 1023.0
margin_bottom = 638.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "Exit to Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="CheckButton" parent="."]
margin_left = 64.0
margin_top = 56.0
margin_right = 603.0
margin_bottom = 112.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "Toggle Fullscreen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVoliume" type="Label" parent="Audio"]
margin_left = 72.0
margin_top = 136.0
margin_right = 453.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 2 )
text = "Master Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="Audio/MasterVoliume"]
margin_left = 480.0
margin_right = 556.0
margin_bottom = 54.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "+"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="Button" parent="Audio/MasterVoliume"]
margin_left = 400.0
margin_right = 464.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "-"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="CheckButton" parent="."]
margin_left = 64.0
margin_top = 208.0
margin_right = 630.0
margin_bottom = 264.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "BorderLess Window"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vsync" type="CheckButton" parent="."]
margin_left = 64.0
margin_top = 280.0
margin_right = 301.0
margin_bottom = 336.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "Vsync"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsCounter" type="CheckButton" parent="."]
margin_left = 64.0
margin_top = 352.0
margin_right = 465.0
margin_bottom = 408.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "FPS Counter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apply" type="Button" parent="."]
margin_left = 64.0
margin_top = 576.0
margin_right = 220.0
margin_bottom = 630.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "Apply"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_entered" from="." to="." method="_on_Options_tree_entered"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ExitMenu" to="." method="_on_ExitMenu_pressed"]
[connection signal="toggled" from="Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="Audio/MasterVoliume/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Audio/MasterVoliume/Minus" to="." method="_on_Minus_pressed"]
[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
[connection signal="toggled" from="Vsync" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="FpsCounter" to="." method="_on_FpsCounter_toggled"]
[connection signal="pressed" from="Apply" to="." method="_on_Apply_pressed"]
